<resources>
    <string name="app_name">ARoidWater</string>


    <!--ARoidWater-->
    <string name="button_report">上报信息</string>
    <string name="button_start_detect">AR视角</string>
    <string name="button_position_test">定位测试</string>
    <string name="button_water_detect">积水检测</string>
    <string name="button_func_test">整体功能测试</string>

    <string name="start_locate">开始定位</string>
    <string name="stop_locate">停止定位</string>
    <string name="locating">定位中</string>
    <string name="inputbox_distance_hint">查找范围（m）</string>
    <string name="uploadInfo">上传数据</string>

    <string name="title_activity_report">上报信息</string>
    <string name="latitude">纬度</string>
    <string name="longtitude">经度</string>
    <string name="warn_type">警告类型</string>
    <string name="time">时间</string>
    <string name="deep">水深(cm)</string>
    <string name="area">积水面积(m^2)</string>

    <string name="default_server">预设服务器地址列表：\nMSI开热点 192.168.137.1\nvivoNex开热点 192.168.43.96</string>
    <string name="button_change_server">更改服务器地址</string>
    <string name="change_server_confirm">确认更改服务器地址？</string>
    <string name="server_address">服务器地址</string>
    <string name="now_server_address">当前服务器地址为</string>

    <string name="button_map">地图视角</string>


    <string name="report_confirm">确认上报当前所填信息？</string>
    <string name="report_failed">上报失败</string>
    <string name="report_success">上报成功</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="socket_timeout">socket连接超时，服务器可能未上线</string>
    <string name="report_msg_success">上报信息成功</string>
    <string name="report_msg_failed">上报信息失败</string>
    <string name="report_msg_failed_same">上报信息失败，已存在相同信息</string>

    <string name="action_settings">Settings</string>


</resources>
