<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.ServerActivity"
    tools:showIn="@layout/activity_report">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/dimen_common"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/dimen_common">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_common">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputbox_server_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_address"
                android:maxLength="20"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_common"
            android:text="@string/default_server"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_change_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_common"
            android:text="@string/button_change_server"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>